Medio funciona lista seguidos

--- a/PracticaMaD/Web/Css/styles.css
+++ b/PracticaMaD/Web/Css/styles.css
@@ -133,3 +133,11 @@ input, select, textarea  {
     padding-top: 5px;
    
 }
+
+/* User follows. */
+
+table.userFollows {
+    margin: 0 auto;
+    text-align: center;
+    width: 45%;
+}
