--- a/PracticaMaD/Web/Css/styles.css
+++ b/PracticaMaD/Web/Css/styles.css
@@ -4,7 +4,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
     margin: 10px 20px;
-    background-color: #dddde0;    
+    background-color: #98C1D9;
 }
 
 /* Links. */
@@ -31,19 +31,19 @@ a:hover {
 /* Page title. */
 
 #pageTitle {
-    background-color: #097099;    
+    background-color: #4B244A;
     color: #fff;
     text-align: center;
     font-weight: bold;
     padding: 5px 0 5px 5px;
     width: 99%;
-    font-weight: bold;    
+    font-weight: bold;
 }
 
 /* Menu. */
 
 #menu {
-    background-color: #094069;
+    background-color: #533A7B;
     color: #fff;
     text-align: left;
     padding: 5px 0 5px 5px;
@@ -55,7 +55,7 @@ a:hover {
 }
 
 #menuLinks a {
-    color : #fffac6;
+    color: #58a4b0;
 }
 
 /* Content. */
@@ -111,8 +111,8 @@ div.button {
     width: 100%;
 }
 
-input, select, textarea  {
-    background-color: #f4f4f4;
+input, select, textarea {
+    background-color: #58a4b0;
 }
 
 /* Error messages. */
