--- a/PracticaMaD/Web/PracticaMaD.Master
+++ b/PracticaMaD/Web/PracticaMaD.Master
@@ -4,15 +4,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head id="Head1" runat="server">
-    <title>PracticaMaD</title>
-    <link href="~/Css/Styles.css" rel="stylesheet" type="text/css" />
+    <link href="~/Css/styles.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Window. -->
     <div id="window">
         <!-- Page title. -->
         <div id="pageTitle">
-            <asp:Localize ID="lclPageTitle" runat="server" meta:resourcekey="lclPageTitle" />
+            <asp:HyperLink ID="lblTitle" runat="server"><asp:Localize ID="lclPageTitle" runat="server" meta:resourcekey="lclPageTitle" /></asp:HyperLink>
         </div>
         <!-- Menu. -->
         <div id="menu">
