--- a/PracticaMaD/Web/PracticaMaD.Master
+++ b/PracticaMaD/Web/PracticaMaD.Master
@@ -9,6 +9,7 @@
 <body>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <form runat="server">
     <!-- Window. -->
     <div id="window">
         <!-- Page title. -->
@@ -51,6 +52,25 @@
                 </asp:ContentPlaceHolder>
             </span>
         </div>
+        <div>
+            
+                <asp:GridView ID="gvTags" runat="server" CssClass="userFollows"
+                    AutoGenerateColumns="False"
+                    OnPageIndexChanging="gvTagsPageIndexChanging"
+                    ShowHeaderWhenEmpty="True">
+                    <Columns>
+                        <asp:HyperLinkField
+                                        DataNavigateUrlFields="tagid"
+                                        DataNavigateUrlFormatString="~/Pages/User/TagImages.aspx?ID={0}"
+                                        DataTextField="tagname"
+                                        HeaderText="Tag Name"
+                                        SortExpression="tagname" />
+                        <asp:BoundField DataField="timesUsed" HeaderText="Times Used" />
+                    </Columns>
+                </asp:GridView>
+            
+        </div>
+
 
         <!-- Body content. -->
         <div id="content">
@@ -62,6 +82,7 @@
         </div>
         <!-- End of Window. -->
     </div>
+        </form>
     <!-- End of HTML body. -->
 </body>
 <!-- End of HTML. -->
