--- a/PracticaMaD/Web/PracticaMaD.Master
+++ b/PracticaMaD/Web/PracticaMaD.Master
@@ -49,7 +49,7 @@
                 </asp:ContentPlaceHolder>
                     <br />
                     <br />
-                    <asp:TextBox class="form-group mx-sm-3 mb-2" ID="txtKeywords" runat="server"></asp:TextBox>
+                    <asp:TextBox class="form-group mx-sm-3 mb-2 col-md-2" ID="txtKeywords" runat="server"></asp:TextBox>
                     <asp:DropDownList class="form-select" Width="200" data-width="fit" ID="DropDownList1" runat="server">
                         <asp:ListItem Selected="True">Select a Category</asp:ListItem>
                         <asp:ListItem>Retrato</asp:ListItem>
